test-aws/aws_configs/us-west-2/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-4432313c",
     "RouteTableId": "rtb-296bf350"
    },
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-018d6c7a",
     "RouteTableId": "rtb-296bf350",
     "SubnetId": "subnet-9a0c48fc"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [
    {
     "GatewayId": "vgw-81fd279f"
    }
   ],
   "RouteTableId": "rtb-296bf350",
   "Routes": [
    {
     "DestinationCidrBlock": "200.101.1.0/24",
     "GatewayId": "igw-aad7d6cd",
     "Origin": "CreateRoute",
     "State": "blackhole"
    },
    {
     "DestinationCidrBlock": "10.100.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-aad7d6cd",
     "Origin": "CreateRoute",
     "State": "blackhole"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "GNS3-BGP-Test"
    }
   ],
   "VpcId": "vpc-815775e7"
  },
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-18d27e63",
     "RouteTableId": "rtb-0578557c"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0578557c",
   "Routes": [
    {
     "DestinationCidrBlock": "10.194.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-6ee90d17"
  },
  {
   "Associations": [
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-4958ea32",
     "RouteTableId": "rtb-e3d7e486",
     "SubnetId": "subnet-1f315846"
    },
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-8859ebf3",
     "RouteTableId": "rtb-e3d7e486",
     "SubnetId": "subnet-d9cafabc"
    },
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-ca5d4faf",
     "RouteTableId": "rtb-e3d7e486"
    },
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-b05be9cb",
     "RouteTableId": "rtb-e3d7e486",
     "SubnetId": "subnet-9c8adceb"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-e3d7e486",
   "Routes": [
    {
     "DestinationCidrBlock": "10.112.16.0/21",
     "Origin": "CreateRoute",
     "State": "blackhole",
     "VpcPeeringConnectionId": "pcx-1be7b972"
    },
    {
     "DestinationCidrBlock": "172.31.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.193.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-911c45f8"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-068fee63",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": ""
    },
    {
     "Key": "Project",
     "Value": "RDS"
    }
   ],
   "VpcId": "vpc-f8fad69d"
  },
  {
   "Associations": [
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-e560d29e",
     "RouteTableId": "rtb-557e482c",
     "SubnetId": "subnet-b26c24fa"
    },
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-ad63d1d6",
     "RouteTableId": "rtb-557e482c",
     "SubnetId": "subnet-9c240cfa"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-557e482c",
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-911c45f8"
    },
    {
     "DestinationCidrBlock": "10.193.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.194.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-201c4549"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-ab3fd0cd",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Project",
     "Value": "batfish-service|customer-vpc"
    },
    {
     "Key": "aws:cloudformation:logical-id",
     "Value": "PublicRouteTable"
    },
    {
     "Key": "aws:cloudformation:stack-id",
     "Value": "arn:aws:cloudformation:us-west-2:118292266645:stack/CustomerEssentialStack-VPC-1G8NR3EP4JVOL/0dd3b050-df0f-11e7-b00e-503acbd4dc99"
    },
    {
     "Key": "aws:cloudformation:stack-name",
     "Value": "CustomerEssentialStack-VPC-1G8NR3EP4JVOL"
    },
    {
     "Key": "Name",
     "Value": "CustomerEssentialStack Public Routes"
    }
   ],
   "VpcId": "vpc-6f6f8316"
  },
  {
   "Associations": [
    {
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-99d37fe2",
     "RouteTableId": "rtb-f47f528d",
     "SubnetId": "subnet-fcdc9cb4"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-f47f528d",
   "Routes": [
    {
     "DestinationCidrBlock": "10.193.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-201c4549"
    },
    {
     "DestinationCidrBlock": "10.194.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-660ae900",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "ES in VPC Public Routes"
    },
    {
     "Key": "aws:cloudformation:logical-id",
     "Value": "PublicRouteTable"
    },
    {
     "Key": "aws:cloudformation:stack-name",
     "Value": "Elasticsearch-Cluster"
    },
    {
     "Key": "aws:cloudformation:stack-id",
     "Value": "arn:aws:cloudformation:us-west-2:118292266645:stack/Elasticsearch-Cluster/f96057f0-dac6-11e7-a70f-503a90a9c4d1"
    }
   ],
   "VpcId": "vpc-6ee90d17"
  },
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-f367d588",
     "RouteTableId": "rtb-6b714712"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-6b714712",
   "Routes": [
    {
     "DestinationCidrBlock": "10.193.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-6f6f8316"
  }
 ]
}
